<?xml version="1.0" encoding="utf-8"?>
<!--
    Designed and developed by 2022 skydoves (Jaewoong Eum)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
  <string name="app_name">The Closet Whisperer</string>
  <string name="weight">Weight</string>
  <string name="height">Height</string>
  
  <string name="tab_dashboard">Home</string>
  <string name="tab_closet">Closet</string>
  <string name="tab_add">Add Item</string>
  <string name="tab_outfits">Outfits</string>
  <string name="tab_profile">Profile</string>

  <string name="login_title">Welcome back</string>
  <string name="login_subtitle">Get today\'s outfit before your coffee gets cold.</string>
  <string name="register_title">Create your closet</string>
  <string name="register_subtitle">Set up your wardrobe profile in minutes.</string>
</resources>